Refactoring ephem bot

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ venv
 /week_1/__pycache__
 /homework-week-2/homework-1/settings.py
 /homework-week-2/homework-1/bot.log
+/homework-week-2/settings.py
+/homework-week-2/bot.log
