--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 APScheduler==3.6.3
 attrs==21.4.0
+beautifulsoup4==4.11.1
 cachetools==4.2.2
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.3
 ephem==4.1.3
+Faker==13.13.0
 Flask==2.1.2
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
 idna==3.3
 iniconfig==1.1.1
 itsdangerous==2.1.2
@@ -13,15 +17,19 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 packaging==21.3
 pluggy==1.0.0
+psycopg2-binary==2.9.3
 py==1.11.0
 pyparsing==3.0.9
 pytest==7.0.1
 pytest-sugar==0.9.4
+python-dateutil==2.8.2
 python-telegram-bot==13.11
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 requests==2.27.1
 six==1.16.0
+soupsieve==2.3.2.post1
+SQLAlchemy==1.4.37
 termcolor==1.1.0
 tomli==2.0.1
 tornado==6.1
