--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ click==8.1.3
 ephem==4.1.3
 Faker==13.13.0
 Flask==2.1.2
+Flask-Login==0.6.1
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
 greenlet==1.1.2
 idna==3.3
 iniconfig==1.1.1
@@ -37,3 +39,4 @@ tzdata==2022.1
 tzlocal==4.2
 urllib3==1.26.9
 Werkzeug==2.1.2
+WTForms==3.0.1
